# my-atmosphere

./: Cargo.toml  Dioxus.toml  Dockerfile  README.md  tailwind.css
assets/: tailwind.css
docs/: oauth-flow.md
src/: main.rs  server_fns.rs  state.rs  types.rs
src/backend/: mod.rs  oauth.rs  repo.rs
src/components/: mod.rs
src/views/: callback.rs  dashboard.rs  home.rs  login.rs  mod.rs
