[package]
name = "my-atmosphere"
version = "0.1.0"
authors = ["Sam Zanca <sam@zanca.dev>"]
edition = "2021"

[dependencies]
dioxus = { version = "0.7.1", features = ["router", "fullstack"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
web-sys = { version = "0.3.103", features = ["Window", "Location", "Storage"] }
url = "2.5.8"

atproto-identity = { version = "0.14.5", optional = true }
atproto-oauth = { version = "0.14.5", optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
rand = { version = "0.10.2", optional = true }
hex = { version = "0.4.3", optional = true }
form_urlencoded = { version = "1.2.2", optional = true }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = [
    "dioxus/server",
    "dep:atproto-identity",
    "dep:atproto-oauth",
    "dep:reqwest",
    "dep:tokio",
    "dep:chrono",
    "dep:rand",
    "dep:hex",
    "dep:form_urlencoded",
]
