[package]
name = "my-atmosphere"
version = "0.1.0"
authors = ["Sam Zanca <sam@zanca.dev>"]
edition = "2021"

[dependencies]
dioxus = { version = "0.7.1", features = ["router", "fullstack"] }
atproto-oauth-dioxus = { git = "https://tangled.org/metru.dev/atproto-crates", branch = "main" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
web-sys = { version = "0.3.103", features = ["Window", "Location", "Storage"] }
url = "2.5.8"

atproto-identity = { git = "https://tangled.org/metru.dev/atproto-crates", branch = "main", optional = true }
atproto-oauth = { git = "https://tangled.org/metru.dev/atproto-crates", branch = "main", optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = [
    "dioxus/server",
    "atproto-oauth-dioxus/server",
    "dep:atproto-identity",
    "dep:atproto-oauth",
    "dep:reqwest",
]
